# k8s-slm-log-agent

./: .env.example  .gitignore  BOOTSTRAP_READY_STATUS.md  CLUSTER_STATUS.md  DEBUG_LSP.md  FLUX_MIGRATION_PROGRESS.md  INSTALL_LSP.md  K3S_PORT_80_DIAGNOSIS.md  K3S_TO_K8S_MIGRATION_PLAN.md  Makefile  NVIM_PRACTICE_GUIDE.md  OIDC.md  PHASE_6_UPDATE.md  PROPMPT_REGISTRY.md  README.md  STEP3_ANALYSIS.md  SWITCHOVER_PLAN.md  VALIDATION_RESULTS.md  VENV_DETECTION_ADVANCED.md  VSCODE_SHORTCUTS.md  agents.md  dspy.md  evals.md  golden_dataset_synthetic.json  infra-roadmap.md  justfile  pyproject.toml
.claude/: settings.local.json
clusters/homelab/: infrastructure.yaml  workloads.yaml
docs/: K3S_TO_K8S_MIGRATION_PLAN.md  LLM_OBSERVABILITY_SDK_ARCHITECTURE.md  LOG_ANALYZER_MIGRATION_GUIDE.md  PRE_BOOTSTRAP_CHECKLIST.md  SEMANTICS.md  TIL.md  demo.md  demo_update.md  flux-migration-testing-strategy.md  flux-tools-reference.md  k3s-vs-k8s-with-flux-tradeoffs.md  k8s-api-exploration.md  llama-cpp-build.md  mermaid-arch.mmd  node-specs.md  phase-3a-fastapi-crd-integration.md  scripts.md  test-principles.md
evals/: LABELING_GUIDE.md  README.md  combine_datasets.py  dataset_analysis.py  extract_by_namespace_and_severity.py  extract_from_previous_evals.py  extract_golden_dataset.py  golden-v1.json  golden_dataset_from_evals.json  golden_dataset_real.json  golden_dataset_severity_filtered.json  golden_dataset_synthetic.json  golden_dataset_unlabeled.json  golden_dataset_unlabeled_v2.json  label_all_logs.py  merge_and_rebalance.py  sample_for_labeling.json  sample_labeled.json  synthesize_logs.py
exports/: README.md
helpers/: calc-time-range.sh  create_evaluation.py  deploy.sh  evaluate.py  evaluate.sh  test-k8s.sh
infrastructure/: README.md  kustomization.yaml
infrastructure/controllers/: envoy-gateway-helmrelease.yaml  kustomization.yaml
infrastructure/gateway/: 01-gatewayclass.yaml  02-envoy-proxy-config.yaml  03-gateway.yaml  05-grafana-httproute.yaml  kustomization.yaml
infrastructure/logging/: alloy-helmrelease.yaml  grafana-helmrelease.yaml  kustomization.yaml  loki-helmrelease.yaml  tempo-helmrelease.yaml
inventory/: crds.txt  helm-releases.yaml  helm-values-alloy.yaml  helm-values-grafana.yaml  helm-values-loki.yaml  helm-values-tempo.yaml  namespaces.txt  services.yaml  storage.yaml  workloads.yaml
just-helpers/: analyze-k8s.sh  analyze.sh  build.sh  curl-analyze.sh  curl-stream.sh  dashboard-cm.sh  deploy.sh  loki-labels.sh  loki-query.sh  push.sh  test-k8s-local.sh  test-k8s.sh  test-stream.sh  wait-for.sh
llm-observability-sdk/: README.md  pyproject.toml
llm-observability-sdk/examples/: basic_usage.py
llm-observability-sdk/src/llm_observability/: __init__.py
llm-observability-sdk/src/llm_observability/adapters/: __init__.py  arize.py  base.py  mlflow.py  otlp.py
llm-observability-sdk/src/llm_observability/core/: __init__.py  observer.py
llm-observability-sdk/src/llm_observability/semantic/: __init__.py  contract.py
llm-observability-sdk/src/llm_observability/utils/: __init__.py
reference/: node-specs.md
scripts/: log_templates.json
workloads/: kustomization.yaml
workloads/log-analyzer/: .env.example  Dockerfile  README.md  configmap.yaml  deployment.yaml  kustomization.yaml  prompts-configmap.yaml  pyproject.toml  test_trace.py
workloads/log-analyzer/k8s/: 00-namespace.yaml  02-deployment.yaml  03-service.yaml
workloads/log-analyzer/prompt_templates/: k8s_log_analysis_v1.yaml
workloads/log-analyzer/src/log_analyzer/: config.py  llm.py  loki.py  main.py  pipeline.py  registry.py
workloads/log-analyzer/src/log_analyzer/evaluation/: __init__.py
workloads/log-analyzer/src/log_analyzer/models/: __init__.py  prompts.py  registry.py  requests.py  responses.py
workloads/log-analyzer/src/log_analyzer/observability/: __init__.py  logging.py
workloads/log-analyzer/src/log_analyzer/services/: __init__.py
workloads/log-analyzer/tests/: README.md  __init__.py  conftest.py  test_analyze.py  test_analyze_integration.py  test_analyze_stream.py  test_analyze_stream_integration.py  test_integration.py  test_registry.py  test_unit.py
(+66 files in other folders)
