[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-observability"
version = "0.1.0"
description = "OpenTelemetry-based LLM observability SDK with backend flexibility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "LLM Observability Team"},
]
keywords = ["llm", "observability", "opentelemetry", "tracing", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
arize = [
    # Arize-specific dependencies (if any)
]
mlflow = [
    "mlflow>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-observability-sdk"
Documentation = "https://llm-observability.readthedocs.io"
Repository = "https://github.com/yourusername/llm-observability-sdk"
Issues = "https://github.com/yourusername/llm-observability-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_observability"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=llm_observability",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
