[project]
name = "log-analyzer"
version = "0.1.0"
description = "FastAPI service for LLM-powered log analysis and structured extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "pytest>=9.0.2",
    "pyaml>=25.7.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_analyzer"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require real services, deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (use mocks, fast)",
]
# Run only unit tests by default
addopts = "-m 'not integration'"
